# kwiver

CMake/utils/: kwiver-utils-python.cmake
arrows/ceres/: register_algorithms.cxx
arrows/core/: dynamic_config_none.h
arrows/kpf/: register_algorithms.cxx
arrows/ocv/: register_algorithms.cxx
arrows/serialize/protobuf/: CMakeLists.txt  convert_protobuf.cxx  convert_protobuf.h  integer.cxx  integer.h  register_algorithms.cxx
arrows/super3d/: register_algorithms.cxx
sprokit/processes/adapters/: embedded_pipeline_extension.h
sprokit/processes/core/: deserializer_process.cxx  serializer_process.cxx  serializer_process.h  video_input_process.cxx
sprokit/processes/examples/call_SMQTK_pipeline/: register_processes.cxx
sprokit/processes/matlab/: register_processes.cxx
sprokit/processes/transport/: CMakeLists.txt  register_processes.cxx  transport_util.cxx  transport_util.h  zmq_transport_bridge_process.cxx  zmq_transport_bridge_process.h  zmq_transport_receive_process.cxx  zmq_transport_receive_process.h  zmq_transport_send_process.cxx  zmq_transport_send_process.h
sprokit/src/processes/examples/: const_number_process.cxx  print_number_process.cxx  print_number_process.h  take_number_process.cxx  (+1 more)
sprokit/src/schedulers/: registration.cxx
sprokit/tests/pipelines/: test_remote_one.sh
vital/: set.h
vital/algo/: CMakeLists.txt  dynamic_configuration.h
vital/plugin_loader/: CMakeLists.txt  plugin_filter_category.h  plugin_filter_default.cxx  plugin_filter_default.h  plugin_loader.cxx  plugin_loader.h  plugin_manager.cxx  plugin_manager.h  plugin_registrar.cxx  plugin_registrar.h
vital/types/: category_hierarchy.cxx  category_hierarchy.h  feature_track_set.h  point.h
vital/types/protobuf/: CMakeLists.txt  integer.proto
vital/util/: enum_converter.h
(+7 files in other folders)
